<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuestionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:text="@string/title_planet_quiz" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnQuestion1"
            style="@style/QuizButton"
            android:text="@string/question_largest" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnQuestion2"
            style="@style/QuizButton"
            android:text="@string/question_moons" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnQuestion3"
            style="@style/QuizButton"
            android:text="@string/question_spins" />

    </LinearLayout>
</ScrollView>
